--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,3 +23,7 @@ add_executable(27_main_deadlock_global 27-threads-api/main-deadlock-global.c)
 add_executable(27_main_deadlock 27-threads-api/main-deadlock.c)
 add_executable(27_main_signal_cv 27-threads-api/main-signal-cv.c)
 add_executable(27_main_signal 27-threads-api/main-signal.c)
+add_executable(29_one-cv-while 29-threads-cv/main-one-cv-while.c)
+add_executable(29_two-cvs-if 29-threads-cv/main-two-cvs-if.c)
+add_executable(29_two-cvs-while-extra-unlock 29-threads-cv/main-two-cvs-while-extra-unlock.c)
+add_executable(29_two-cvs-while 29-threads-cv/main-two-cvs-while.c)
