--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,3 +30,6 @@ add_executable(30_two-cvs-while 30-threads-cv/main-two-cvs-while.c)
 add_executable(31_fork-join 31-threads-sema/fork-join.c)
 add_executable(31_rendezvous 31-threads-sema/rendezvous.c)
 add_executable(31_barrier 31-threads-sema/barrier.c)
+add_executable(31_reader-writer 31-threads-sema/reader-writer.c)
+add_executable(31_reader-writer-nostarve 31-threads-sema/reader-writer-nostarve.c)
+add_executable(31_mutex-nostarve 31-threads-sema/mutex-nostarve.c)
