--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,8 @@ add_executable(31_barrier 31-threads-sema/barrier.c)
 add_executable(31_reader-writer 31-threads-sema/reader-writer.c)
 add_executable(31_reader-writer-nostarve 31-threads-sema/reader-writer-nostarve.c)
 add_executable(31_mutex-nostarve 31-threads-sema/mutex-nostarve.c)
+add_executable(32_vector-deadlock 32-threads-bugs/vector-deadlock.c)
+add_executable(32_vector-global-order 32-threads-bugs/vector-global-order.c)
+add_executable(32_vector-try-wait 32-threads-bugs/vector-try-wait.c)
+add_executable(32_vector-avoid-hold-and-wait 32-threads-bugs/vector-avoid-hold-and-wait.c)
+add_executable(32_vector-nolock 32-threads-bugs/vector-nolock.c)
