ch 37, 38; start ch 39 wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,5 @@ add_executable(32_vector-global-order 32-threads-bugs/vector-global-order.c)
 add_executable(32_vector-try-wait 32-threads-bugs/vector-try-wait.c)
 add_executable(32_vector-avoid-hold-and-wait 32-threads-bugs/vector-avoid-hold-and-wait.c)
 add_executable(32_vector-nolock 32-threads-bugs/vector-nolock.c)
+add_executable(39_files-stat 39-file-files-and-directories/stat.c)
+add_executable(39_files-ls 39-file-files-and-directories/myls.c)
