--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,3 +42,6 @@ add_executable(39_files-stat 39-file-files-and-directories/stat.c)
 add_executable(39_files-ls 39-file-files-and-directories/myls.c)
 add_executable(39_files-tail 39-file-files-and-directories/mytail.c)
 add_executable(39_files-find 39-file-files-and-directories/myfind.c)
+add_executable(45_check-xor 45-file-integrity/check-xor.c)
+add_executable(45_check-fletcher 45-file-integrity/check-fletcher.c)
+add_executable(45_test-xor-fletcher 45-file-integrity/test-xor-fletcher.c)
