--- a/45-file-integrity/Makefile
+++ b/45-file-integrity/Makefile
@@ -1,5 +1,5 @@
 
-ALL = check-xor
+ALL = check-xor test-xor-fletcher
 COMMON = common.h checksums.h
 
 all: $(ALL)
@@ -11,6 +11,8 @@ clean:
 check-xor: check-xor.c $(COMMON)
 	gcc -o check-xor.o check-xor.c -Wall -pthread -O
 
+test-xor-fletcher: test-xor-fletcher.c $(COMMON)
+	gcc -o test-xor-fletcher.o test-xor-fletcher.c -Wall -pthread -O
 #vector-global-order: vector-global-order.c $(COMMON)
 #	gcc -o vector-global-order vector-global-order.c -Wall -pthread -O
 #
