--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,3 +45,5 @@ add_executable(39_files-find 39-file-files-and-directories/myfind.c)
 add_executable(45_check-xor 45-file-integrity/check-xor.c)
 add_executable(45_check-fletcher 45-file-integrity/check-fletcher.c)
 add_executable(45_test-xor-fletcher 45-file-integrity/test-xor-fletcher.c)
+add_executable(48_udp-client 48-dist-intro/UDP-client.c)
+add_executable(48_udp-server 48-dist-intro/UDP-server.c)
